<resources>
    <string name="app_name">pomodoro_study</string>
    <string name="email_phone_input">Email</string>
    <string name="password_input">Password</string>
    <string name="create_account_button">Create an account</string>
    <string name="login_input">Login</string>
    <string name="forgot_Password_text">Forgot password?</string>
    <string name="pomodoro_nav">Home</string>
    <string name="home_nav">Home</string>
    <string name="task_nav">Tasks</string>
    <string name="or_text">or</string>
    <string name="settings_nav">Settings</string>
    <string name="ready_Text">Ready,Set,Focus!</string>
    <string name="flashcards_Text">Flashcards</string>
    <string name="one_hr_Text">1 hr</string>
    <string name="two_hr_Text">2 hr</string>
    <string name="three_hr_Text">3 hr</string>
    <string name="four_hr_Text">4 hr</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="focus_text">Focus</string>
    <string name="break_text">Break</string>
    <string name="reset_text">Reset</string>
    <string name="cs_FC_text">Computer Science</string>
    <string name="b_FC_text">Business</string>
    <string name="bio_FC_text">Biology</string>
    <string name="an_FC_text">Anatomy</string>
    <string name="cardNUm_text">15 cards</string>
    <string name="question_text">Question</string>
    <string name="answer_text">Answer</string>
    <string name="createTASK_text">Create New Task</string>
    <string name="taskNAME_text">Name</string>
    <string name="date_text">Date</string>
    <string name="enterTask_text">Enter Task Name</string>
    <string name="selectDate_text">Select Date</string>
    <string name="startTime_text">Start to Start</string>
    <string name="endTime_text">End Time</string>
    <string name="selectEnd_text">Select end time</string>
    <string name="repeat_text">Repeat</string>
    <string name="createButton_text">Create Task</string>
    <string name="forgotPass_text">Forgot your password?</string>
    <string name="passInstruction_text">Enter your registered email below to receive password reset instructions</string>
    <string name="resetPass_text">Reset Password</string>
    <string name="w_text">Weekdays</string>
    <string name="email_text">Email Address</string>
    <string name="back_text">Back to login</string>
    <string name="join_us_text">Join us and transform your productivity!</string>
    <string name="full_name_text">Name</string>
    <string name="password_text">Password</string>
    <string name="con_password_text">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_privacy_text">I agree to the Terms and Privacy</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="have_an_account_sign_in_text">Have an account? Sign In</string>
    <string name="lets_get_Text">Lets get you signed in!</string>
    <string name="text_background">Log in and tap into focused study sessions. Let’s make every minute count!</string>
    <string name="weekday_text">Weekdays</string>
    <string name="_00_00_time">00:00</string>
    <string name="tap_text">Tap to see Answer</string>
    <string name="HomeId">Home</string>
    <string name="tasks">Tasks</string>
    <string name="logout">Logout</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">


        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>