<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_bg">

    <!-- White Card for Input Fields -->

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="284dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="125dp"
        android:fontFamily="monospace"
        android:text="@string/createTASK_text"
        android:textColor="@android:color/white"
        android:textSize="28sp" />

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="827dp"
        android:backgroundTint="@color/purple_500"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="603dp"
        android:layout_below="@id/tv_header"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/rounded_layout"
        android:elevation="60dp"
        android:orientation="vertical"

        android:padding="20dp">

        <!-- Task Name -->
        <!-- Task Name Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/taskNAME_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <!-- Modern Styled EditText -->
        <EditText
            android:id="@+id/et_task_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_input"
            android:elevation="2dp"
            android:hint="@string/enterTask_text"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <!-- Task Date -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/date_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <!-- Task Date -->
        <EditText
            android:id="@+id/et_task_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_input"
            android:clickable="true"
            android:elevation="2dp"
            android:focusable="true"
            android:hint="@string/selectDate_text"
            android:importantForAutofill="no"
            android:inputType="date"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Task Start Time -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/startTime_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_start_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_input"
            android:clickable="true"
            android:elevation="2dp"
            android:focusable="true"
            android:hint="@string/startTime_text"
            android:importantForAutofill="no"
            android:inputType="time"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Task End Time -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/endTime_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_end_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_input"
            android:clickable="true"
            android:elevation="2dp"
            android:focusable="true"
            android:hint="@string/selectEnd_text"
            android:importantForAutofill="no"
            android:inputType="time"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Repeat & Weekdays Options -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

        <!-- Create Task Button -->
        <Button
            android:id="@+id/btn_create_task"
            android:layout_width="445dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/purple_500"
            android:elevation="29dp"
            android:text="@string/createButton_text"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>