<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/background_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/Background" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="341dp"
            android:layout_height="61dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="43dp"
            android:layout_marginEnd="43dp"
            android:layout_marginBottom="401dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/email_phone_input"
            android:inputType="textEmailAddress"
            android:textColorHint="#A9FFFFFF" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="341dp"
            android:layout_height="61dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="44dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="323dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/password_input"
            android:textColorHint="#A9FFFFFF" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="341dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="41dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="162dp"
            android:background="@drawable/button_background"
            android:text="@string/login_input"
            android:textColor="#FFF7F7" />

        <Button
            android:id="@+id/signupbutton"
            android:layout_width="341dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="42dp"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="68dp"
            android:background="@drawable/button_background"
            android:text="@string/create_account_button"
            android:textColor="#2A2A2A" />

        <TextView
            android:id="@+id/forgotPasswordID"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="58dp"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="239dp"
            android:text="@string/forgot_Password_text"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/or_ID"
            android:layout_width="318dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="797dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="136dp"
            android:text="@string/or_text"
            android:textAlignment="center" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>