<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".FlashcardActivity">



    <TextView
        android:id="@+id/ready_textID"
        android:layout_width="386dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="851dp"
        android:fontFamily="monospace"
        android:text="@string/ready_Text"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/flashcard_textID"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="356dp"
        android:layout_marginEnd="234dp"
        android:layout_marginBottom="561dp"
        android:fontFamily="monospace"
        android:text="@string/flashcards_Text"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_1HR_ID"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="219dp"
        android:layout_marginBottom="746dp"
        android:text="@string/one_hr_Text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button_3hr_id"
        android:layout_width="165dp"
        android:elevation="4dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="226dp"
        android:layout_marginBottom="641dp"
        android:text="@string/three_hr_Text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button_4hr_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="239dp"
        android:layout_marginTop="231dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="639dp"
        android:text="@string/four_hr_Text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/button_2hr_id"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="238dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="746dp"
        android:text="@string/two_hr_Text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp" />
    <FrameLayout
        android:id="@+id/flFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="881dp"
        android:layout_marginBottom="-4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:navGraph="@layout/navigation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView" />

    <ImageView
        android:id="@+id/redFlashcardID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="527dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="357dp"
        app:srcCompat="@drawable/red_flashcard" />

    <ImageView
        android:id="@+id/blueFlashcardID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="423dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="461dp"
        app:srcCompat="@drawable/blueflashcard" />

    <ImageView
        android:id="@+id/purpleFlashcardID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="636dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="248dp"
        app:srcCompat="@drawable/purpleflashcard" />

    <ImageView
        android:id="@+id/greenFlashcardID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="751dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="133dp"
        app:srcCompat="@drawable/greenflashcard" />

    <TextView
        android:id="@+id/cs_textView"
        android:layout_width="164dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="435dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="498dp"
        android:fontFamily="monospace"
        android:text="@string/cs_FC_text" />

    <TextView
        android:id="@+id/bis_textView"
        android:layout_width="164dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="61dp"
        android:layout_marginTop="531dp"
        android:layout_marginEnd="202dp"
        android:layout_marginBottom="402dp"
        android:fontFamily="monospace"
        android:text="@string/b_FC_text"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/bio_textView"
        android:layout_width="164dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="645dp"
        android:layout_marginEnd="211dp"
        android:layout_marginBottom="288dp"
        android:fontFamily="monospace"
        android:text="@string/bio_FC_text" />

    <TextView
        android:id="@+id/an_textView"
        android:layout_width="164dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="760dp"
        android:layout_marginEnd="211dp"
        android:layout_marginBottom="173dp"
        android:fontFamily="monospace"
        android:text="@string/an_FC_text" />

    <TextView
        android:id="@+id/cardNum1_textView"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="262dp"
        android:layout_marginTop="644dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="289dp"
        android:fontFamily="monospace"
        android:text="@string/cardNUm_text" />

    <TextView
        android:id="@+id/cardNum3_textView"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="258dp"
        android:layout_marginTop="532dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="401dp"
        android:fontFamily="monospace"
        android:text="@string/cardNUm_text" />

    <TextView
        android:id="@+id/cardNum2_textView"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="258dp"
        android:layout_marginTop="435dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="498dp"
        android:fontFamily="monospace"
        android:text="@string/cardNUm_text" />

    <TextView
        android:id="@+id/cardNum4_textView"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="258dp"
        android:layout_marginTop="762dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="171dp"
        android:fontFamily="monospace"
        android:text="@string/cardNUm_text" />

</RelativeLayout>